fix mobile subnav spacing

--- a/ui/common/css/component/_subnav.scss
+++ b/ui/common/css/component/_subnav.scss
@@ -7,6 +7,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(17ch, 1fr));
     grid-gap: 3px;
+    margin-bottom: 3px;
 
     background: $c-bg-page;
 
